# dpinput

./: .gitignore  CMakeLists.txt  README.md  config.h.in
debian/: changelog  control  files
src/: CMakeLists.txt  dpinput.conf.in  dpinput.cpp  fcitx-dpinput.conf.in  jianpin.txt  phrase2jianpin.sh  pinyin.txt  trie.cc  trie.h
